--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color:#000;
-  overflow: hidden;
+  /*overflow: hidden;*/
   text-align:center;
 }
 
@@ -25,10 +25,11 @@ svg{
 
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-  position: fixed;
+  position: relative;
   right: 0;
   top: 0;
   height: 100%;
+  width: 100%;
 }
 
 /* Add some content at the bottom of the video/page */
