--- a/01-comming-soon/css/styles.css
+++ b/01-comming-soon/css/styles.css
@@ -36,7 +36,7 @@ p{ line-height: 1.6; font-size: 1.05em; font-weight: 400; color: #fff; }
 h1{ font-size: 3.5em; line-height: 1; }
 h2{ font-size: 3em; line-height: 1.1; }
 h3{ font-size: 2.5em; }
-h4{ font-size: 1.5em; }
+h4{ font-size: 2.5em; }
 h5{ font-size: 1.2em; }
 h6{ font-size: .9em; letter-spacing: 1px; }
 
@@ -70,9 +70,9 @@ b.light-color{ color: #444; }
 
 .center-text{ text-align: center; }
 
-.display-table{ display: table; height: 100%; width: 100%; }
+.display-table{ display: block; height: 100%; width: 100%; }
 
-.display-table-cell{ display: table-cell; vertical-align: middle; }
+.display-table-cell{ display: block; vertical-align: middle; }
 
 
 
